# Epsilon-Engine

./: .gitconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  BFME Codes.txt  CMakeLists.txt  COMPILING.md  CONTRIBUTORS  Doxyfile  Epsilon Engine.cbp  Epsilon Engine.depend  Epsilon Engine.layout  Epsilon.cpp  Epsilon.hpp  Example.hpp  LICENSE  LICENSE.md  LearningVulkanApplication.hpp  Makefile  Makefile.mac  Makefile.unix  Makefile.windows  README.md  Roboto.hpp  build_shaders.sh  dotnet_test.deps.json  filesystem.h  imgui.ini  main.cpp  main_lib.cpp  roboto.hpp  version.h  vk_data.hpp
.github/workflows/: cmake.yml
Documentation/html/: _alert_box_8h_source.html  _audio_8cpp_source.html  _audio_8h_source.html  _audio_listener_8h_source.html  _b_m_p_8hpp_source.html  _b_s_p_face_8h_source.html  _button_8h_source.html  _c_p_u_i_d_8h_source.html  _check_error_8h_source.html  _cloth_physic_object_8h_source.html  _command_functions_8h_source.html  _container_8h_source.html  _control_8h_source.html  _cube_map_8h_source.html  _d_d_s_8h_source.html  _effect_8h_source.html  _entity_template_8cpp_source.html  _epsilon_8cpp_source.html  _frame_buffer_8h_source.html  _frustum_8cpp_source.html  _full_screen_quad_8h_source.html  _g_u_i_2_texture_8h_source.html  _g_u_i_2_types_8h_source.html  _g_u_i_8h_source.html  _g_u_i___initialization_8h_source.html  _gl_cache_8h_source.html  _image_2_d_d_s_8cpp_source.html  _image_2_d_d_s_8h_source.html  _image_2_d_d_s_file_8h_source.html  _image_8hpp_source.html  _includes_8h_source.html  _job_8h_source.html  _light_probe_8h_source.html  _m_d5___model_8cpp_source.html  _m_d5___model_8h_source.html  _mesh_8cpp_source.html  _model_8cpp_source.html  _model_8h_source.html  _motion_blur_8cpp_source.html  _motion_blur_8h_source.html  (+659 more)
Documentation/latex/: annotated.tex  class_app__coll__graph.md5  class_b_s_p_face__coll__graph.md5  class_b_s_pfile.tex  class_button.tex  class_button__coll__graph.md5  class_c_quake3_b_s_p.tex  class_cubemap_renderer.tex  (+171 more)
Epsilon Engine/: Epsilon Engine.cbp  Epsilon Engine.depend  Epsilon Engine.layout  version.h
android-build/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  build.ninja  cmake_install.cmake
assets/: default.emat
core/: AmbientProbe.hpp  App.cpp  App.hpp  BSP.cpp  BSP.h  BSPFace.cpp  BSPFace.h  BSPfile.h  BSPformat.h  CBitset.h  Camera.cpp  Clock.hpp  CommandFunctions.h  Container.hpp  ConvexHull.hpp  Core.hpp  CubeMap.h  Cubemap.cpp  Editor.hpp  Engine.cpp  Engine.hpp  Epsilon.cpp  Epsilon.h  EpsilonEngine.hpp  EpsilonMemory.h  Error.hpp  Frustum.cpp  Frustum.h  GIProbe.hpp  GUI_Initialization.h  Gaussian.hpp  Grass.h  Helpers.hpp  Init.hpp  Light.h  Log.h  MD5_Anim.cpp  MD5_Anim.h  MD5_Model.cpp  MD5_Model.h  (+55 more)
deps-64/: .gitignore
editor/: .gitignore  CMakeLists.txt  LevelEditor.pro  LevelEditor.pro.user.22  LevelEditor.pro.user.4.8-pre1  LevelEditor.pro.user.caea67a  README.md  editor.cpp  editor.hpp  image.cpp  image.hpp  leveleditor.ui  main.cpp  stbi.hpp  threadmanager.hpp
editor/GL/: glad.c  glad.h
editor/assets/models/: axis.blend
editor/assets/shaders/: Gizmos.glsl  Gizmos_v.glsl  OutLineFragment.glsl  fragment.glsl  fragment_BB.glsl  skybox.fglsl  skybox.vglsl  terrainfragment.glsl  terrainvertex.glsl  vertex.glsl
editor/brushes/: brush.hpp  brush_manager.hpp
editor/framelesswindow/: framelesswindow.cpp  framelesswindow.h  framelesswindow.ui
editor/include/: BSP.h  BSPFace.h  BSPfile.h  Frustum.h  Log.hpp  Mesh.h  Model.h  Shader.h  Types.h  boundingbox.h  camera.h  cpu.hpp  defaultgrid.h  gizmo_geometry.hpp  gizmos.hpp  helpers.h  leveleditor.h  oglwidget.h  picking.h  skybox.h  terrain.cpp  terrain.h  texture.hpp  threadpool.hpp
editor/renderpasses/: compute.hpp  default.hpp  forward.hpp  screen_space_shadows.hpp  setup_graphics.hpp  taa.hpp
editor/renderpasses/shaders/: default.hpp  forward.hpp
editor/src/: BSP.cpp  BSPFace.cpp  Camera.cpp  Frustum.cpp  Log.cpp  Mesh.cpp  Model.cpp  Shader.cpp  leveleditor.cpp  main.cpp  oglwidget.cpp  terrain.cpp  texture.cpp
editor/systems/: grass.hpp
editor/types/: asset_type.hpp  camera_info.hpp  editor_node.hpp  script.hpp  transform.hpp
editor/ui/: assets.hpp  catppuccin.hpp  gizmo.hpp  inspector.hpp  main_viewport.hpp  material_editor.hpp  menu_bar.hpp  node_hierarchy.hpp  object_property.hpp  postprocess.hpp  style.hpp  theme_selector.hpp  toolbar.hpp  ui_element.hpp
editor/ui/native/: file_dialog.hpp
editor/ui/native/win32/: ShellHelpers.h  win_funcs.hpp
editor/utils/: mesh_utils.hpp  node_factory.hpp  path_utils.hpp  transform.hpp
engine/: Frame.hpp  context.hpp  frame.hpp  material.hpp  scene.hpp  types.hpp
examples/basic/: CMakeLists.txt  basic.cpp
examples/bsp/: BSP.hpp  CMakeLists.txt  SourceBSP.hpp  bsp_definitions.hpp  main.cpp
examples/bsp/utils/: utils.hpp
examples/chess/: CMakeLists.txt  UCI.hpp  chess.cpp  chess.hpp  main.cpp
examples/chess/game/: board.cpp  board.hpp  common.hpp  player.cpp  player.hpp
examples/chess/utils/: popen2.hpp
examples/model/: CMakeLists.txt  Model.hpp  main.cpp
framework/: app.hpp  common.hpp  def.hpp  env.cpp  env.hpp  exception.hpp  stacktrace.hpp  window.hpp
include/: CommandFunctions.h  DDS.h  GUI_Initialization.h  Log.h  Picking.h  Text.h  cubemapRenderer.h  emlFormat.h  empFormat.h
media/: Thumbs.db  icon.rc
platform/: directory_watch.hpp  os.hpp
platform/android/app/src/main/cpp/: AndroidApp.cpp  AndroidApp.hpp  CMakeLists.txt  native-lib.cpp
src/: DDS.cpp  ShadowMapping.cpp  cubemapRenderer.cpp  main.cpp  resources.rc
templates/project/basic/: CMakeLists.txt  main.cpp  template.hpp
vk/: allocator.hpp  command.hpp  descriptors.hpp  device.hpp  extensions.hpp  framebuffer.hpp  instance.hpp  memory.hpp  pipeline.hpp  queues.hpp  rasterizer.hpp  render_pass.hpp  shader.hpp  surface.hpp  swap_chain.hpp  sync_objects.hpp  texture.hpp  validation_layers.hpp  vertex_buffer.hpp  viewport.hpp  vk.hpp  vk_data.hpp
vk_aux/: device.hpp  queues.hpp  surface.hpp  swap_chain.hpp  validation_layers.hpp
(+3885 files in other folders)
